--- a/webroot/css/light-constants.css
+++ b/webroot/css/light-constants.css
@@ -1,7 +1,7 @@
 :root
 {
     --text-color: black;
-	--text-softer-color: grey;
+	--text-softer-color: #666666;
 	--link-color: #0000EE;
 	--current-border-color: #111;
 	--dark-button-icon: url("/img/light-icon1x.png");
@@ -18,4 +18,5 @@
 	--active-paginator-button-background-color: #333;
 	--active-paginator-button-text-color: #fff;
 	--paginator-info-text-color: #666;
+	--admin-text-color: #1010EE;
 }
